refactor(tool): 优化工具体系和接口，增强参数校验与角色管理
- 为 AbstractTool 的 execute() 方法添加参数校验说明，规范子类实现要求
- 使用 HttpComponentsClientHttpRequestFactory 替换 SimpleClientHttpRequestFactory，调整连接和读取超时设置
- 修正 CalculatorTool 的参数验证逻辑，提升类型安全和错误信息准确性
- 在 DeepSeekMessage 中新增 MessageRole 枚举，统一角色字符串管理
- 调整 ChatServiceImpl 和 FunctionCallingServiceImpl 中角色赋值为枚举类型，增强类型安全性
- 增加工具注册表 ToolRegistry 的卸载功能，实现工具动态管理
- 统一工具和接口中 DTO 字段的校验注解，增强数据有效性保障
- ToolController 接口方法添加权限控制，执行工具接口需登录，保护系统资源
- 调整 ToolServiceImpl 中工具参数处理逻辑，完善工具列表参数转换和执行异常处理
- WeatherTool、TranslatorTool、WebSearchTool 等工具增强返回值类型安全及日志信息丰富度
- 新增 TimeTool 时间工具，支持基础时间参数校验与格式化执行框架
- 添加 ToolServiceImpl 单元测试，覆盖工具列表获取及执行逻辑，提升代码质量保障
- 优化工具扩展规划文档，更新工具优先级、功能描述和技术方案，提升项目规划清晰度